Update class schedule with correct Fordham classes

--- a/Class-Schedule/class-schedule.html
+++ b/Class-Schedule/class-schedule.html
@@ -297,48 +297,59 @@
     <script>
         const classes = [
             {
-                instructor: "Bromberg, Joshua",
-                days: ["Monday", "Thursday"],
-                startDate: "08/27/2025",
-                endDate: "12/19/2025",
-                startTime: "10:00 AM",
-                endTime: "11:15 AM",
-                location: "Lincoln Center Campus | Leon Lowenstein Bldg.",
-                room: "SL11C",
-                subject: "Course with Prof. Bromberg"
-            },
-            {
-                instructor: "Charlton, Donald J.",
-                days: ["Monday", "Wednesday"],
-                startDate: "08/27/2025",
-                endDate: "12/19/2025",
-                startTime: "01:00 PM",
-                endTime: "02:15 PM",
-                location: "Lincoln Center Campus | Leon Lowenstein Bldg.",
-                room: "1124",
-                subject: "Course with Prof. Charlton"
-            },
-            {
-                instructor: "Budinich, Sebastian",
+                instructor: "TBD",
                 days: ["Monday"],
                 startDate: "08/27/2025",
                 endDate: "12/19/2025",
                 startTime: "06:00 PM",
                 endTime: "08:45 PM",
                 location: "Lincoln Center Campus | Leon Lowenstein Bldg.",
-                room: "508",
-                subject: "Course with Prof. Budinich"
+                room: "TBD",
+                subject: "Faith and Reasoning"
             },
             {
-                instructor: "Filocamo, Joseph F.",
+                instructor: "TBD",
+                days: ["Monday", "Thursday"],
+                startDate: "08/27/2025",
+                endDate: "12/19/2025",
+                startTime: "10:00 AM",
+                endTime: "11:15 AM",
+                location: "Lincoln Center Campus | Leon Lowenstein Bldg.",
+                room: "TBD",
+                subject: "Finite Math"
+            },
+            {
+                instructor: "TBD",
+                days: ["Monday", "Wednesday"],
+                startDate: "08/27/2025",
+                endDate: "12/19/2025",
+                startTime: "01:00 PM",
+                endTime: "02:15 PM",
+                location: "Lincoln Center Campus | Leon Lowenstein Bldg.",
+                room: "TBD",
+                subject: "Microeconomics"
+            },
+            {
+                instructor: "TBD",
+                days: ["Tuesday", "Friday"],
+                startDate: "08/27/2025",
+                endDate: "12/19/2025",
+                startTime: "08:30 AM",
+                endTime: "09:45 AM",
+                location: "Lincoln Center Campus | Leon Lowenstein Bldg.",
+                room: "TBD",
+                subject: "Stats 1"
+            },
+            {
+                instructor: "TBD",
                 days: ["Wednesday"],
                 startDate: "08/27/2025",
                 endDate: "12/19/2025",
                 startTime: "02:30 PM",
                 endTime: "05:15 PM",
                 location: "Lincoln Center Campus | Leon Lowenstein Bldg.",
-                room: "SL11D",
-                subject: "Course with Prof. Filocamo"
+                room: "Ground Floor",
+                subject: "Ground Floor Class"
             }
         ];
 
