Add end times to weekly overview for full time range visibility

--- a/Class-Schedule/class-schedule.html
+++ b/Class-Schedule/class-schedule.html
@@ -219,9 +219,11 @@
         
         .mini-class-time {
             font-weight: bold;
-            font-size: 1.1rem;
+            font-size: 1.05rem;
             margin-bottom: 8px;
             color: #fff;
+            line-height: 1.3;
+            letter-spacing: 0.3px;
         }
         
         .mini-class-name {
@@ -476,7 +478,7 @@
                 .sort((a, b) => parseTime(a.startTime) - parseTime(b.startTime))
                 .map(c => `
                     <div class="mini-class">
-                        <div class="mini-class-time">${c.startTime}</div>
+                        <div class="mini-class-time">${c.startTime} - ${c.endTime}</div>
                         <div class="mini-class-name">${c.subject}</div>
                         <div style="font-size: 0.85rem; opacity: 0.9;">Room ${c.room}</div>
                     </div>
@@ -500,7 +502,7 @@
                 .sort((a, b) => parseTime(a.startTime) - parseTime(b.startTime))
                 .map(c => `
                     <div class="mini-class">
-                        <div class="mini-class-time">${c.startTime}</div>
+                        <div class="mini-class-time">${c.startTime} - ${c.endTime}</div>
                         <div class="mini-class-name">${c.subject}</div>
                         <div style="font-size: 0.85rem; opacity: 0.9;">Room ${c.room}</div>
                     </div>
@@ -512,7 +514,7 @@
                 .sort((a, b) => parseTime(a.startTime) - parseTime(b.startTime))
                 .map(c => `
                     <div class="mini-class">
-                        <div class="mini-class-time">${c.startTime}</div>
+                        <div class="mini-class-time">${c.startTime} - ${c.endTime}</div>
                         <div class="mini-class-name">${c.subject}</div>
                         <div style="font-size: 0.85rem; opacity: 0.9;">Room ${c.room}</div>
                     </div>
