--- a/Class-Schedule/class-schedule.html
+++ b/Class-Schedule/class-schedule.html
@@ -574,6 +574,7 @@
             renderTodaysClasses();
             renderWeeklySchedule();
             renderAllClasses();
+            console.log('Schedule loaded with', classes.length, 'classes');
         }
 
         // Run immediately and then every second
